crates/math-core/tests/snapshots/conversion_test__kern.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\kern1em y"
---
<math>
    <mi>x</mi>
    <mspace width="1em"/>
    <mi>y</mi>
</math>
