crates/math-core/tests/snapshots/conversion_test__kern_decimal_comma.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\kern1,5em y"
---
<math>
    <mi>x</mi>
    <mspace width="1.5em"/>
    <mi>y</mi>
</math>
