crates/math-core/tests/snapshots/conversion_test__kern_leading_dot.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\kern.5em y"
---
<math>
    <mi>x</mi>
    <mspace width="0.5em"/>
    <mi>y</mi>
</math>
