crates/math-core/tests/snapshots/conversion_test__kern_negative.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\kern-1em y"
---
<math>
    <mi>x</mi>
    <mspace style="margin-left:-1em;"/>
    <mi>y</mi>
</math>
