crates/math-core/tests/snapshots/conversion_test__kern_no_trailing_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\kern1.5emx"
---
<math>
    <mi>x</mi>
    <mspace width="1.5em"/>
    <mi>x</mi>
</math>
