crates/math-core/tests/snapshots/conversion_test__kern_space_before_number.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\kern 1em y"
---
<math>
    <mi>x</mi>
    <mspace width="1em"/>
    <mi>y</mi>
</math>
