crates/math-core/tests/snapshots/conversion_test__kern_space_before_unit.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\kern1 em y"
---
<math>
    <mi>x</mi>
    <mspace width="1em"/>
    <mi>y</mi>
</math>
