crates/math-core/tests/snapshots/conversion_test__lVert_and_rVert2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x + \\lVert + y + \\rVert + z"
---
<math>
    <mi>x</mi>
    <mo>+</mo>
    <mo stretchy="false" form="prefix">‖</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mi>y</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mo stretchy="false" form="postfix">‖</mo>
    <mo>+</mo>
    <mi>z</mi>
</math>
